fix overflow-x

--- a/src/components/Menu/MenuContainer/styles.css
+++ b/src/components/Menu/MenuContainer/styles.css
@@ -20,6 +20,10 @@
     cursor: pointer;
 }
 
+/* .menu-item:visited {
+    color: #BCBCBC;
+} */
+
 .link:visited {
     color: #000;
 }
