--- a/src/components/Slider/styles.css
+++ b/src/components/Slider/styles.css
@@ -10,7 +10,7 @@
 }
 
 .container-controls {
-    margin-top: 10px;
+    margin-top: -30px;
     width: 100%;
     display: flex;
     justify-content: center;
