--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
 html,
 body {
     font-family: 'Raleway', sans-serif;
+    overflow-x: hidden;
 }
 
 a {
